# usbcomm

./: .gitignore  CMakeLists.txt  README.md
drivers/: ReadMe.rtf  libftd2xx-x86_64-1.4.6.tar
drivers/OSX/: install.sh
drivers/linux-arm-v7/: install.sh  libftd2xx-arm-v7-hf-1.4.6.tar
drivers/linux-arm-v7/release/: ReadMe.txt
drivers/linux-x86_64/release/examples/: Makefile
drivers/linux-x86_64/release/examples/static/: Makefile
include/: usbcomm.hpp  usbdev.hpp
source/: main.cpp  usbcomm.cpp  usbdev.cpp
